// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Shared Components|Table Default 1`] = `
<div
  style={
    Object {
      "backgroundColor": "#000",
      "minHeight": "100vh",
    }
  }
>
  <div
    className="sc-csuQGl jCYKXr"
  >
    <table
      className="sc-Rmtcm cYFaVE"
    >
      <tbody
        className="sc-hzDkRC kpsoyz"
      >
        <tr
          className="sc-jhAzac ixMctE"
        >
          <td
            className="sc-fBuWsC hHWlcv"
          >
            US
          </td>
          <td
            className="sc-fBuWsC hHWlcv"
          >
            Washington, D.C.
          </td>
          <td
            className="sc-fBuWsC hHWlcv"
          >
            USA
          </td>
        </tr>
        <tr
          className="sc-jhAzac ixMctE"
        >
          <td
            className="sc-fBuWsC hHWlcv"
          >
            PL
          </td>
          <td
            className="sc-fBuWsC hHWlcv"
          >
            Warsaw
          </td>
          <td
            className="sc-fBuWsC hHWlcv"
          >
            Poland
          </td>
        </tr>
        <tr
          className="sc-jhAzac ixMctE"
        >
          <td
            className="sc-fBuWsC hHWlcv"
          >
            DE
          </td>
          <td
            className="sc-fBuWsC hHWlcv"
          >
            Berlin
          </td>
          <td
            className="sc-fBuWsC hHWlcv"
          >
            Germany
          </td>
        </tr>
        <tr
          className="sc-jhAzac ixMctE"
        >
          <td
            className="sc-fBuWsC hHWlcv"
          >
            FR
          </td>
          <td
            className="sc-fBuWsC hHWlcv"
          >
            Paris
          </td>
          <td
            className="sc-fBuWsC hHWlcv"
          >
            France
          </td>
        </tr>
        <tr
          className="sc-jhAzac ixMctE"
        >
          <td
            className="sc-fBuWsC hHWlcv"
          >
            ES
          </td>
          <td
            className="sc-fBuWsC hHWlcv"
          >
            Madird
          </td>
          <td
            className="sc-fBuWsC hHWlcv"
          >
            Spain
          </td>
        </tr>
        <tr
          className="sc-jhAzac ixMctE"
        >
          <td
            className="sc-fBuWsC hHWlcv"
          >
            —
          </td>
          <td
            className="sc-fBuWsC hHWlcv"
          >
            Sed eu dictum orci. In hac habitasse platea dictumst.
  Donec vestibulum scelerisque est sit amet mattis. Duis ac magna
  elementum felis semper dapibus nec id ligula. Nullam vehicula urna
  ac arcu scelerisque tincidunt. Vestibulum ante ipsum primis in
  faucibus orci luctus et ultrices posuere cubilia Curae; Pellentesque
  aliquet, nulla et tincidunt porttitor, eros risus pellentesque lorem,
  in elementum dui magna ac sem. Nulla facilisi. In hac habitasse platea
  dictumst. Sed eu dictum orci. In hac habitasse platea dictumst.

          </td>
          <td
            className="sc-fBuWsC hHWlcv"
          >
            Sed eu dictum orci. In hac habitasse platea dictumst.
  Donec vestibulum scelerisque est sit amet mattis. Duis ac magna
  elementum felis semper dapibus nec id ligula. Nullam vehicula urna
  ac arcu scelerisque tincidunt. Vestibulum ante ipsum primis in
  faucibus orci luctus et ultrices posuere cubilia Curae; Pellentesque
  aliquet, nulla et tincidunt porttitor, eros risus pellentesque lorem,
  in elementum dui magna ac sem. Nulla facilisi. In hac habitasse platea
  dictumst. Sed eu dictum orci. In hac habitasse platea dictumst.

          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`Storyshots Shared Components|Table with header 1`] = `
<div
  style={
    Object {
      "backgroundColor": "#000",
      "minHeight": "100vh",
    }
  }
>
  <div
    className="sc-csuQGl jCYKXr"
  >
    <table
      className="sc-Rmtcm cYFaVE"
    >
      <thead
        className="sc-bRBYWo ccSRck"
      >
        <tr
          className="sc-jhAzac ixMctE"
        >
          <th
            className="sc-fMiknA hMoJIS"
          >
            Code
          </th>
          <th
            className="sc-fMiknA hMoJIS"
          >
            Capital
          </th>
          <th
            className="sc-fMiknA hMoJIS"
          >
            Country
          </th>
        </tr>
      </thead>
      <tbody
        className="sc-hzDkRC kpsoyz"
      >
        <tr
          className="sc-jhAzac ixMctE"
        >
          <td
            className="sc-fBuWsC hHWlcv"
          >
            US
          </td>
          <td
            className="sc-fBuWsC hHWlcv"
          >
            Washington, D.C.
          </td>
          <td
            className="sc-fBuWsC hHWlcv"
          >
            USA
          </td>
        </tr>
        <tr
          className="sc-jhAzac ixMctE"
        >
          <td
            className="sc-fBuWsC hHWlcv"
          >
            PL
          </td>
          <td
            className="sc-fBuWsC hHWlcv"
          >
            Warsaw
          </td>
          <td
            className="sc-fBuWsC hHWlcv"
          >
            Poland
          </td>
        </tr>
        <tr
          className="sc-jhAzac ixMctE"
        >
          <td
            className="sc-fBuWsC hHWlcv"
          >
            DE
          </td>
          <td
            className="sc-fBuWsC hHWlcv"
          >
            Berlin
          </td>
          <td
            className="sc-fBuWsC hHWlcv"
          >
            Germany
          </td>
        </tr>
        <tr
          className="sc-jhAzac ixMctE"
        >
          <td
            className="sc-fBuWsC hHWlcv"
          >
            FR
          </td>
          <td
            className="sc-fBuWsC hHWlcv"
          >
            Paris
          </td>
          <td
            className="sc-fBuWsC hHWlcv"
          >
            France
          </td>
        </tr>
        <tr
          className="sc-jhAzac ixMctE"
        >
          <td
            className="sc-fBuWsC hHWlcv"
          >
            ES
          </td>
          <td
            className="sc-fBuWsC hHWlcv"
          >
            Madird
          </td>
          <td
            className="sc-fBuWsC hHWlcv"
          >
            Spain
          </td>
        </tr>
        <tr
          className="sc-jhAzac ixMctE"
        >
          <td
            className="sc-fBuWsC hHWlcv"
          >
            —
          </td>
          <td
            className="sc-fBuWsC hHWlcv"
          >
            Sed eu dictum orci. In hac habitasse platea dictumst.
  Donec vestibulum scelerisque est sit amet mattis. Duis ac magna
  elementum felis semper dapibus nec id ligula. Nullam vehicula urna
  ac arcu scelerisque tincidunt. Vestibulum ante ipsum primis in
  faucibus orci luctus et ultrices posuere cubilia Curae; Pellentesque
  aliquet, nulla et tincidunt porttitor, eros risus pellentesque lorem,
  in elementum dui magna ac sem. Nulla facilisi. In hac habitasse platea
  dictumst. Sed eu dictum orci. In hac habitasse platea dictumst.

          </td>
          <td
            className="sc-fBuWsC hHWlcv"
          >
            Sed eu dictum orci. In hac habitasse platea dictumst.
  Donec vestibulum scelerisque est sit amet mattis. Duis ac magna
  elementum felis semper dapibus nec id ligula. Nullam vehicula urna
  ac arcu scelerisque tincidunt. Vestibulum ante ipsum primis in
  faucibus orci luctus et ultrices posuere cubilia Curae; Pellentesque
  aliquet, nulla et tincidunt porttitor, eros risus pellentesque lorem,
  in elementum dui magna ac sem. Nulla facilisi. In hac habitasse platea
  dictumst. Sed eu dictum orci. In hac habitasse platea dictumst.

          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`Storyshots Shared Components|Table with numbered rows 1`] = `
<div
  style={
    Object {
      "backgroundColor": "#000",
      "minHeight": "100vh",
    }
  }
>
  <div
    className="sc-csuQGl jCYKXr"
  >
    <table
      className="sc-Rmtcm cYFaVE"
    >
      <thead
        className="sc-bRBYWo ccSRck"
      >
        <tr
          className="sc-jhAzac ixMctE"
        >
          <th
            className="sc-fMiknA hMoJIS"
          >
            #
          </th>
          <th
            className="sc-fMiknA hMoJIS"
          >
            Code
          </th>
          <th
            className="sc-fMiknA hMoJIS"
          >
            Capital
          </th>
          <th
            className="sc-fMiknA hMoJIS"
          >
            Country
          </th>
        </tr>
      </thead>
      <tbody
        className="sc-hzDkRC kpsoyz"
      >
        <tr
          className="sc-jhAzac ixMctE"
        >
          <td
            className="sc-dVhcbM ezLuIO"
          >
            1
          </td>
          <td
            className="sc-fBuWsC hHWlcv"
          >
            US
          </td>
          <td
            className="sc-fBuWsC hHWlcv"
          >
            Washington, D.C.
          </td>
          <td
            className="sc-fBuWsC hHWlcv"
          >
            USA
          </td>
        </tr>
        <tr
          className="sc-jhAzac ixMctE"
        >
          <td
            className="sc-dVhcbM ezLuIO"
          >
            2
          </td>
          <td
            className="sc-fBuWsC hHWlcv"
          >
            PL
          </td>
          <td
            className="sc-fBuWsC hHWlcv"
          >
            Warsaw
          </td>
          <td
            className="sc-fBuWsC hHWlcv"
          >
            Poland
          </td>
        </tr>
        <tr
          className="sc-jhAzac ixMctE"
        >
          <td
            className="sc-dVhcbM ezLuIO"
          >
            3
          </td>
          <td
            className="sc-fBuWsC hHWlcv"
          >
            DE
          </td>
          <td
            className="sc-fBuWsC hHWlcv"
          >
            Berlin
          </td>
          <td
            className="sc-fBuWsC hHWlcv"
          >
            Germany
          </td>
        </tr>
        <tr
          className="sc-jhAzac ixMctE"
        >
          <td
            className="sc-dVhcbM ezLuIO"
          >
            4
          </td>
          <td
            className="sc-fBuWsC hHWlcv"
          >
            FR
          </td>
          <td
            className="sc-fBuWsC hHWlcv"
          >
            Paris
          </td>
          <td
            className="sc-fBuWsC hHWlcv"
          >
            France
          </td>
        </tr>
        <tr
          className="sc-jhAzac ixMctE"
        >
          <td
            className="sc-dVhcbM ezLuIO"
          >
            5
          </td>
          <td
            className="sc-fBuWsC hHWlcv"
          >
            ES
          </td>
          <td
            className="sc-fBuWsC hHWlcv"
          >
            Madird
          </td>
          <td
            className="sc-fBuWsC hHWlcv"
          >
            Spain
          </td>
        </tr>
        <tr
          className="sc-jhAzac ixMctE"
        >
          <td
            className="sc-dVhcbM ezLuIO"
          >
            6
          </td>
          <td
            className="sc-fBuWsC hHWlcv"
          >
            —
          </td>
          <td
            className="sc-fBuWsC hHWlcv"
          >
            Sed eu dictum orci. In hac habitasse platea dictumst.
  Donec vestibulum scelerisque est sit amet mattis. Duis ac magna
  elementum felis semper dapibus nec id ligula. Nullam vehicula urna
  ac arcu scelerisque tincidunt. Vestibulum ante ipsum primis in
  faucibus orci luctus et ultrices posuere cubilia Curae; Pellentesque
  aliquet, nulla et tincidunt porttitor, eros risus pellentesque lorem,
  in elementum dui magna ac sem. Nulla facilisi. In hac habitasse platea
  dictumst. Sed eu dictum orci. In hac habitasse platea dictumst.

          </td>
          <td
            className="sc-fBuWsC hHWlcv"
          >
            Sed eu dictum orci. In hac habitasse platea dictumst.
  Donec vestibulum scelerisque est sit amet mattis. Duis ac magna
  elementum felis semper dapibus nec id ligula. Nullam vehicula urna
  ac arcu scelerisque tincidunt. Vestibulum ante ipsum primis in
  faucibus orci luctus et ultrices posuere cubilia Curae; Pellentesque
  aliquet, nulla et tincidunt porttitor, eros risus pellentesque lorem,
  in elementum dui magna ac sem. Nulla facilisi. In hac habitasse platea
  dictumst. Sed eu dictum orci. In hac habitasse platea dictumst.

          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;
